tests/integration/pilot/test_artifacts/pilot-058a94968f114a619ba739812/TestTraffic/virtualservice/cors/a/to_b/_test_context/VirtualService.1199901980.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: default
  namespace: echo-2-98059
spec:
  hosts:
  - b
  http:
  - corsPolicy:
      allowCredentials: false
      allowHeaders:
      - X-Foo-Bar
      - X-Foo-Baz
      allowMethods:
      - POST
      - GET
      allowOrigins:
      - exact: cors.com
      maxAge: 24h
    route:
    - destination:
        host: b
